[demo-security] refactor, add role to demo user and access token, fixed some issues